--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -338,6 +338,7 @@ flutter:
     - assets/images/video/
     - assets/images/paycoins/
     - assets/shaders/
+    - assets/json/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
